# msvc-repro

./: CMakeLists.txt  fold.cpp  member_ptr.cpp
.github/workflows/: ci.yml
